--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack serve"
+    "start:build": "webpack",
+    "start:watch": "webpack --watch",
+    "start:serve": "webpack serve",
+    "start": "concurrently npm:start:*"
+
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.3.0",
     "css-loader": "^5.0.0",
     "node-sass": "^4.14.1",
     "sass": "^1.27.0",
