--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start:watch": "webpack --watch",
     "start:serve": "webpack serve",
     "start": "concurrently npm:start:*"
-
   },
   "repository": {
     "type": "git",
@@ -28,6 +27,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
     "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
     "node-sass": "^4.14.1",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
